# DeckLab-2.0

./: .gitignore  CMakeLists.txt  SKILL.md  _build_log.txt.err  main.cpp  mainwindow.cpp  mainwindow.h
.claude/: settings.json
communication/: ModbusTcpClient.cpp  ModbusTcpClient.h  PlcWorker.cpp  PlcWorker.h  RegisterMap.h
docs/: verification.md  代码说明文档.md
motor/: MotorController.cpp  MotorController.h  MotorPanel.cpp  MotorPanel.h
platform/: PlatformData.h  PlatformPanel.cpp  PlatformPanel.h  PlatformWorker.cpp  PlatformWorker.h  UdpPlatformClient.cpp  UdpPlatformClient.h
references/: alarm-system.md  modbus-communication.md  motor-control.md  register-map.md  sensor-display.md
sensor/: SensorData.h  SensorPanel.cpp  SensorPanel.h
